--- a/Kaleidoscope/Makefile
+++ b/Kaleidoscope/Makefile
@@ -2,11 +2,12 @@ CC = clang++
 LFALGS = `llvm-config --cxxflags`
 LLIBS = `llvm-config --ldflags --system-libs --libs core`
 
-all: toy
+all: reset toy clean
 
-# 所有cpp的默认编译选项
+# 所有cpp的默认编译选项, 默认加了LLVM的库的链接, 因为我想不到我们有什么文件是不要链接LLVM的库的
+# 前端也需要AST类, 而AST类里有code generator, 所以也是绕不开LLVM的
 %.o:%.cpp
-		$(CC) -c -g -O3 $? -o $@
+		$(CC) -c -g -O3 $? $(LFALGS) -o $@
 
 # bison的默认编译选项, 从somename.y --> somename.tab.c somename.tab.h
 %.tab.c %.tab.h: %.y
@@ -21,11 +22,11 @@ toy:toy.o AST.o
 		$(CC) $? -o  $@  $(LFALGS) $(LLIBS)
 
 
-AST.o: AST.cpp
-		$(CC) -c -g -O3 $? $(LFALGS) -o $@
+# AST.o: AST.cpp
+# 		$(CC) -c -g -O3 $? $(LFALGS) -o $@
 
-toy.o: toy.cpp
-		$(CC) -c -g -O3 $? $(LFALGS) -o $@
+# toy.o: toy.cpp
+# 		$(CC) -c -g -O3 $? $(LFALGS) -o $@
 
 
 
