--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build toy", //task的名字,调用方式就是 task build  
+            "label": "build JIT", //task的名字,调用方式就是 task build  
             "command": "make", //会在命令行中调用此命令  
             "args": [
                 "", //${workspaceRootFolderName} 会被替换成 根目录 即:vscode_c_demo            
@@ -14,5 +14,16 @@
             "type": "shell",
             "problemMatcher": []
         },
+        {
+            "label": "build key", //task的名字,调用方式就是 task build  
+            "command": "make", //会在命令行中调用此命令  
+            "args": [
+                "", //${workspaceRootFolderName} 会被替换成 根目录 即:vscode_c_demo            
+                "-C",
+                "${workspaceFolder}/key"
+            ],
+            "type": "shell",
+            "problemMatcher": []
+        }
     ]
 }
