--- a/LightCC/Makefile
+++ b/LightCC/Makefile
@@ -2,7 +2,7 @@ CC = clang++ #这里的编译器用的是clang, 如果要换成gcc的话, 可能
 LFALGS = `llvm-config --cxxflags`
 LLIBS = `llvm-config --ldflags --system-libs --libs core mcjit native`
 
-all: Main
+all: LightCC
 
 
 %.o:%.cpp
@@ -20,14 +20,15 @@ parser.tab.cpp parser.tab.h: parser.y
 
 
 # Main
-Main:Main.o parser.tab.cpp lexer.o AST.o LLVM.o
+LightCC:Main.o parser.tab.cpp lexer.o AST.o LLVM.o
 		$(CC) Main.o parser.tab.cpp lexer.o AST.o LLVM.o -o  $@  $(LFALGS) $(LLIBS)
 
 
 JIT:JIT.o
 		$(CC) $? -o  $@  $(LFALGS) $(LLIBS)
 
-
+test:test.o output.o
+		$(CC) test.o output.o -o  $@
 
 # 删除目标代码文件
 .PYHONY: clean
